force-app/main/default/objects/Trending__c/Trending__c.object-meta.xml
<CustomObject>
    <label>Trending</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Trending Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trendings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>