force-app/main/default/objects/Trending__c/fields/Last_Time_Avaliable__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Avaliable__c</fullName>
    <label>Last Time Avaliable</label>
    <required>true</required>
    <type>Date</type>
</CustomField>