force-app/main/default/objects/Trending__c/fields/Next_Time_Avaliable__c.field-meta.xml
<CustomField>
    <fullName>Next_Time_Avaliable__c</fullName>
    <label>Next Time Avaliable</label>
    <type>Date</type>
</CustomField>